BNN regression for LV updated

--- a/LV/experiments.ipynb
+++ b/LV/experiments.ipynb
@@ -108,21 +108,10 @@
     "Similar to above, the script run_bnn.py will generate all the files from the experiments regarding the BCNN approach explored in the paper.\n",
     "\n",
     "## The following files are produced\n",
-    "posterior samples from 5 classed (bins), repeated 5 times, a 8 step iteration, with 0.05 threshold. With the time elapsed.\n",
-    "* bnn_res_5_5round_8gen_theta_thresh.npy \n",
-    "* bnn_res_5_5round_8gen_time_thresh.npy\n",
-    "\n",
-    "posterior samples from 4 bins, repeated 5 times, a 8 step iteration, with 0.05 threshold. With the time elapsed.\n",
-    "* bnn_res_4_5round_8gen_theta_thresh.npy - posterior samples from 4 bins, repeated 5 times, a 8 step iteration, with 0.05 threshold.\n",
-    "* bnn_res_4_5round_8gen_time_thresh.npy - time for above\n",
-    "\n",
-    "posterior samples from 3 bins, repeated 5 times, a 8 step iteration, with 0.05 threshold. With the time elapsed.\n",
-    "* bnn_res_3_5round_8gen_theta_thresh.npy - posterior samples from 3 bins, repeated 5 times, a 8 step iteration, with 0.05 threshold.\n",
-    "* bnn_res_3_5round_8gen_time_thresh.npy - time for above\n",
-    "\n",
-    "posterior samples from 5 bins, repeated 5 times, a 8 step iteration, with no threshold. With the time elapsed.\n",
-    "* bnn_res_5_5round_8gen_theta.npy - posterior samples from 5 bins, repeated 5 times, a 8 step iteration, with no threshold.\n",
-    "* bnn_res_5_5round_8gen_theta.npy - time for above"
+    "5 repeated posterior estimations, over 10 rounds each and generating 2500 new samples each round. Output is saved under\n",
+    "* bnn_res_theta_5x10x2500.npy - posterior.\n",
+    "* bnn_res_proposal_5x10x2500.npy - the proposal prior.\n",
+    "* bnn_res_time_5x10x2500.npy - time elapsed."
    ]
   },
   {
@@ -151,13 +140,11 @@
    "metadata": {},
    "source": [
     "## Custom BNN (Testing)\n",
-    "If one preferbly runs only specific hyperparameters not used in the paper one can run the following cell, and potentially tune \n",
-    "* num_bins\n",
-    "* thresh\n",
+    "If one preferbly runs only specific hyperparameters not used in the paper one can run the following cell.\n",
     "\n",
     "and the running time can be reduced by decreasing \n",
-    "* max_rounds (from original 5)\n",
-    "* max_gen (from original 8)"
+    "* total_runs (from original 5)\n",
+    "* num_rounds (from original 10)"
    ]
   },
   {
@@ -166,9 +153,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bnn_res = run_bnn(max_rounds=1,max_gen=3,Ndata=1000,seed=0, multi_dim=True, num_bins=5,thresh=0.05, verbose=True)\n",
-    "bcnn_post = bnn_res['theta']\n",
-    "bcnn_time = bnn_res['time']"
+    "bnn_res = run_bnn(total_runs=5,num_rounds=10,num_data_per_round=2_500,epochs=500,seed=0)\n",
+    "bcnn_post = bnn_res[0]\n",
+    "bcnn_prior = bnn_res[1]\n",
+    "bcnn_time = bnn_res[2]"
    ]
   },
   {
@@ -199,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
