--- a/LV/plotting.ipynb
+++ b/LV/plotting.ipynb
@@ -646,6 +646,95 @@
     "\n",
     "#plt.savefig('lv_time.pdf',dpi=350, bbox_inches = 'tight', pad_inches = 0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# posterior predictive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findQuantile(x, alpha=0.05):\n",
+    "    \"\"\"Find the quantile in the Bayesian distribution\n",
+    "    \n",
+    "    params\n",
+    "        x: the observed data\n",
+    "        alpha: percentiles, e.g., 0.05\n",
+    "    \"\"\"\n",
+    "    xs = np.sort(x, axis=0)\n",
+    "    cpxx = np.cumsum(xs, axis=0) / np.sum(xs, axis=0)\n",
+    "\n",
+    "    upper = 1-alpha/2\n",
+    "    lower = 1-upper\n",
+    "    low = []\n",
+    "    up = []\n",
+    "    for i in range(xs.shape[1]):\n",
+    "        low.append(xs[np.where(cpxx >= lower)[0][0],i])\n",
+    "        up.append(xs[np.where(cpxx >= upper)[0]-1,i][0])\n",
+    "\n",
+    "    return low, up\n",
+    "\n",
+    "def plot_trajs(new_data, target_original_shape, save=False):\n",
+    "    \n",
+    "    \n",
+    "    fig, ax = plt.subplots(1,2, facecolor = 'w', edgecolor = 'w')\n",
+    "    for i in range(len(new_data)):\n",
+    "        if i == 0:\n",
+    "            ax[0].plot(new_data[i,0,:], color = 'C0', alpha = 0.1, label=\"Posterior sample\")\n",
+    "            ax[1].plot(new_data[i,1,:], color = 'C0', alpha = 0.1, label=\"Posterior sample\")\n",
+    "        else:\n",
+    "            ax[0].plot(new_data[i,0,:], color = 'C0', alpha = 0.1)\n",
+    "            ax[1].plot(new_data[i,1,:], color = 'C0', alpha = 0.1)\n",
+    "            \n",
+    "    data_mean = np.mean(new_data,axis=0)\n",
+    "    data_95_0 = findQuantile(new_data[:,0,:], alpha=0.5)\n",
+    "    data_95_1 = findQuantile(new_data[:,1,:], alpha=0.5)\n",
+    "\n",
+    "\n",
+    "    ax[0].plot(data_mean[0,:], color = 'red', label = 'Posterior mean')\n",
+    "    ax[0].plot(data_95_0[0], linestyle='dashed', color = 'red', label = '50% CR')\n",
+    "    ax[0].plot(data_95_0[1], linestyle='dashed', color = 'red')\n",
+    "\n",
+    "\n",
+    "    ax[1].plot(data_mean[1,:], color = 'red', label = 'Posterior mean')\n",
+    "    ax[1].plot(data_95_1[0], linestyle='dashed', color = 'red', label = '50% CR')\n",
+    "    ax[1].plot(data_95_1[1], linestyle='dashed', color = 'red')\n",
+    "    \n",
+    "    x_dim = np.arange(0,target_original_shape.shape[2])\n",
+    "    ax[0].plot(x_dim, target_original_shape[0,0,:], 'kx', label = 'Observed Data')\n",
+    "    ax[1].plot(x_dim, target_original_shape[0,1,:], 'kx', label = 'Observed Data')\n",
+    "    \n",
+    "    \n",
+    "    ax[0].set_title(\"Prey\",fontsize=16)\n",
+    "    ax[1].set_title(\"Predator\",fontsize=16)\n",
+    "    ax[0].set_ylabel(\"Count\",fontsize=16)\n",
+    "\n",
+    "    for j in range(2):\n",
+    "        ax[j].set_xlabel(\"Time\", fontsize=16)\n",
+    "        ax[j].legend(fontsize=16)\n",
+    "        ax[j].spines['right'].set_visible(False)\n",
+    "        ax[j].spines['top'].set_visible(False)\n",
+    "\n",
+    "    fig.set_size_inches(18, 8)\n",
+    "    if not save:\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_post_ts, data_post_thetas = newData(result_posterior[0][-1][::25,:], toexp=True)\n",
+    "plot_trajs(data_post_ts, target_original_shape_ts, save=False)"
+   ]
   }
  ],
  "metadata": {
@@ -664,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
